Changes to World Controller and Refactoring Diverter Control

--- a/modes/divertercontrol/config/divertercontrol.yaml
+++ b/modes/divertercontrol/config/divertercontrol.yaml
@@ -13,219 +13,331 @@ mode:
 #+ mode start is enabled  (left loop to diverter to scoop)
 
 state_machines:
-  leftloop_state:
+  diverter_status:
     persist_state: true
     states:
       start:
-        label: Left Loop Start
-      closed:
-        label: Left Loop Door Closed
-        events_when_started: leftloop_closed, leftloop_statechange, divertercontrol_disableleftloop
-      disabled:
-        label: Left Loop Door Open / Loop Disabled
-        events_when_started: leftloop_disabled, leftloop_statechange, diverter_dropupperdrop
-      enabled:
-        label: Left Loop Door Open / Loop Enabled
-        events_when_started: leftloop_enabled, leftloop_statechange, diverter_dropupperdrop
-      travel:
-        label: Left Loop Door Open / Loop Enabled / Diverter Enabled
-        events_when_started: leftloop_travel, leftloop_statechange, diverter_dropupperdrop
+        label: No State Initalized
+      world_travel:
+        label: Travel is enabled to next world
+        events_when_started: divertercontrol_statechange, divertercontrol_worldtravel_enabled
+      world_villager:
+        label:  Villager Multiball is to be collected
+        events_when_started: divertercontrol_statechange, divertercontrol_worldvillager_enabled
+      world_tools:
+        label: Tools are ready to be collected
+        events_when_started: divertercontrol_statechange, divertercontrol_worldtools_enabled
+      world_running:
+        label: A world is running, but travel is not eabled and tools is not enabled
+        events_when_started: divertercontrol_statechange, divertercontrol_worldrunning_enabled
+      multiball_villager:
+        label: Villager MB is Running
+        events_when_started: divertercontrol_statechange, divertercontrol_multiball_villager_enabled
+      multiball_night:
+        label: Night MB is running
+        events_when_started: divertercontrol_statechange, divertercontrol_multiball_night_enabled
+      multiball_endmode:
+        label: End Mode is running
+        events_when_started: divertercontrol_statechange, divertercontrol_multiball_endmode_enabled
     transitions:
-      - source: start                         #Inital State
-        target: closed
-        events: mode_divertercontrol_started
-      - source: disabled,enabled,travel       #Close Left Loop
-        target: closed
-        events: divertercontrol_leftloop_close
-      - source: closed,enabled,travel         #Disable Left Loop
-        target: disabled
-        events: divertercontrol_leftloop_disable 
-      - source: closed,disabled,travel         #Enable Left Loop
-        target: enabled
-        events: divertercontrol_leftloop_enable 
-      - source: closed,disabled,enabled         #Travel Left Loop
-        target: travel
-        events: divertercontrol_leftloop_travel
-      
-  rightloop_state:
-    persist_state: true
-    states:
-      start:
-        label: Right Loop Start 
-      disabled:
-        label: Right Loop Disabled
-        events_when_started: rightloop_disabled, rightloop_statechange
-      enabled:
-        label: Right Loop Enabled
-        events_when_started: rightloop_enabled, rightloop_statechange
-    transitions:
-      - source: start
-        target: enabled
-        events: mode_divertercontrol_started
-      - source: enabled                     #Disable Right Loop
-        target: disabled
-        events: divertercontrol_rightloop_disable
-      - source: disabled                    #Enable Right Loop
-        target: enabled
-        events: divertercontrol_rightloop_enable
+      - source: start, world_villager, world_tools, world_running, multiball_villager, multiball_night, multiball_endmode       #world_travel
+        target: world_travel
+        events: divertercontrol_worldtravel_requested
+      - source: start, world_travel, world_tools, world_running, multiball_villager, multiball_night, multiball_endmode         #world_villager
+        target: world_villager
+        events: divertercontrol_worldvillager_requested
+      - source: start, world_travel, world_villager, world_running, multiball_villager, multiball_night, multiball_endmode      #world_tools
+        target: world_tools
+        events: divertercontrol_worldtools_requested
+      - source: start, world_travel, world_villager, world_tools, multiball_villager, multiball_night, multiball_endmode        #world_villager
+        target: world_running
+        events: divertercontrol_worldrunning_requested
+      - source: start, world_travel, world_villager, world_tools, world_running, multiball_night, multiball_endmode             #multiball_villager
+        target: multiball_villager
+        events: divertercontrol_multiball_villager_requested
+      - source: start, world_travel, world_villager, world_tools, world_running, multiball_villager, multiball_endmode          #multiball_night
+        target: multiball_night
+        events: divertercontrol_multiball_night_requested
+      - source: start, world_travel, world_villager, world_tools, world_running, multiball_villager, multiball_night            #multiball_endmode
+        target: multiball_endmode
+        events: divertercontrol_multiball_endmode_requested
 
+  # leftloop_state:
+  #   persist_state: true
+  #   states:
+  #     start:
+  #       label: Left Loop Start
+  #     closed:
+  #       label: Left Loop Door Closed
+  #       events_when_started: leftloop_closed, leftloop_statechange, divertercontrol_disableleftloop
+  #     disabled:
+  #       label: Left Loop Door Open / Loop Disabled
+  #       events_when_started: leftloop_disabled, leftloop_statechange, diverter_dropupperdrop
+  #     enabled:
+  #       label: Left Loop Door Open / Loop Enabled
+  #       events_when_started: leftloop_enabled, leftloop_statechange, diverter_dropupperdrop
+  #     travel:
+  #       label: Left Loop Door Open / Loop Enabled / Diverter Enabled
+  #       events_when_started: leftloop_travel, leftloop_statechange, diverter_dropupperdrop
+  #   transitions:
+  #     - source: start                         #Inital State
+  #       target: closed
+  #       events: mode_divertercontrol_started
+  #     - source: disabled,enabled,travel       #Close Left Loop
+  #       target: closed
+  #       events: divertercontrol_leftloop_close
+  #     - source: closed,enabled,travel         #Disable Left Loop
+  #       target: disabled
+  #       events: divertercontrol_leftloop_disable 
+  #     - source: closed,disabled,travel         #Enable Left Loop
+  #       target: enabled
+  #       events: divertercontrol_leftloop_enable 
+  #     - source: closed,disabled,enabled         #Travel Left Loop
+  #       target: travel
+  #       events: divertercontrol_leftloop_travel
+      
+  # rightloop_state:
+  #   persist_state: true
+  #   states:
+  #     start:
+  #       label: Right Loop Start 
+  #     disabled:
+  #       label: Right Loop Disabled
+  #       events_when_started: rightloop_disabled, rightloop_statechange
+  #     enabled:
+  #       label: Right Loop Enabled
+  #       events_when_started: rightloop_enabled, rightloop_statechange
+  #   transitions:
+  #     - source: start
+  #       target: enabled
+  #       events: mode_divertercontrol_started
+  #     - source: enabled                     #Disable Right Loop
+  #       target: disabled
+  #       events: divertercontrol_rightloop_disable
+  #     - source: disabled                    #Enable Right Loop
+  #       target: enabled
+  #       events: divertercontrol_rightloop_enable
+
+
+#DEBUGGING LIGHT PLAYER TO CHECK MODES
 light_player:
-  leftloop_statechange{current_player.state_machine_leftloop_state=="closed"}:
-    gi_specialitem2: red
-  leftloop_statechange{current_player.state_machine_leftloop_state=="disabled"}:
-    gi_specialitem2: purple
-  leftloop_statechange{current_player.state_machine_leftloop_state=="enabled"}:
-    gi_specialitem2: green 
-  leftloop_statechange{current_player.state_machine_leftloop_state=="travel"}:
+  divertercontrol_statechange{current_player.state_machine_diverter_status_state=="start":
+    gi_specialitem2: white
+    gi_captivetop: white
+  divertercontrol_statechange{current_player.state_machine_diverter_status_state=="world_travel":
     gi_specialitem2: blue
-
-  rightloop_statechange{current_player.state_machine_rightloop_state=="disabled"}:
+    gi_captivetop: white
+  divertercontrol_statechange{current_player.state_machine_diverter_status_state=="world_villager":
+    gi_specialitem2: purple
+    gi_captivetop: white
+  divertercontrol_statechange{current_player.state_machine_diverter_status_state=="world_tools":
+    gi_specialitem2: yellow
+    gi_captivetop: white
+  divertercontrol_statechange{current_player.state_machine_diverter_status_state=="world_running":
+    gi_specialitem2: green
+    gi_captivetop: white
+  divertercontrol_statechange{current_player.state_machine_diverter_status_state=="multiball_villager":
+    gi_specialitem2: white
     gi_captivetop: purple
-  rightloop_statechange{current_player.state_machine_rightloop_state=="enabled"}:
-    gi_captivetop: green
+  divertercontrol_statechange{current_player.state_machine_diverter_status_state=="multiball_night":
+    gi_specialitem2: white
+    gi_captivetop: blue
+  divertercontrol_statechange{current_player.state_machine_diverter_status_state=="multiball_endmode":
+    gi_specialitem2: white
+    gi_captivetop: red
 
-timers:
-  #Left Drop Target Down
-  leftdropreset:
-    start_value: 0
-    end_value: 1
-    direction: up
-    control_events:
-      - action: start
-        event: divertercontrol_disableleftloop
-      - action: restart
-        event: drop_target_dt_upperdrop_down
-      - action: restart
-        event: diverter_rightloophit
 
-  #Right Loop Events
-  leftgateclose:
-    start_value: 0
-    end_value: 1
-    direction: up
-    control_events:
-      - action: restart
-        event: diverter_rightloophit
+
+
+#light_player:
+  # leftloop_statechange{current_player.state_machine_leftloop_state=="closed"}:
+  #   gi_specialitem2: red
+  # leftloop_statechange{current_player.state_machine_leftloop_state=="disabled"}:
+  #   gi_specialitem2: purple
+  # leftloop_statechange{current_player.state_machine_leftloop_state=="enabled"}:
+  #   gi_specialitem2: green 
+  # leftloop_statechange{current_player.state_machine_leftloop_state=="travel"}:
+  #   gi_specialitem2: blue
+
+  # rightloop_statechange{current_player.state_machine_rightloop_state=="disabled"}:
+  #   gi_captivetop: purple
+  # rightloop_statechange{current_player.state_machine_rightloop_state=="enabled"}:
+  #   gi_captivetop: green
+
+# timers:
+#   #Left Drop Target Down
+#   leftdropreset:
+#     start_value: 0
+#     end_value: 1
+#     direction: up
+#     control_events:
+#       - action: start
+#         event: divertercontrol_disableleftloop
+#       - action: restart
+#         event: drop_target_dt_upperdrop_down
+#       - action: restart
+#         event: diverter_rightloophit
+
+#   #Right Loop Events
+#   leftgateclose:
+#     start_value: 0
+#     end_value: 1
+#     direction: up
+#     control_events:
+#       - action: restart
+#         event: diverter_rightloophit
       
-  #Left Loop Events
-  rightgateclose:
-    start_value: 0
-    end_value: 1
-    direction: up
-    control_events:
-      - action: restart
-        event: diverter_leftloophit
+#   #Left Loop Events
+#   rightgateclose:
+#     start_value: 0
+#     end_value: 1
+#     direction: up
+#     control_events:
+#       - action: restart
+#         event: diverter_leftloophit
 
-coil_player:
-  diverter_rightloophit:
-    c_upperleftgate: enable
-  timer_leftgateclose_complete:
-    c_upperleftgate: disable
+# coil_player:
+#   diverter_rightloophit:
+#     c_upperleftgate: enable
+#   timer_leftgateclose_complete:
+#     c_upperleftgate: disable
 
-  diverter_leftloophit:
-    c_upperrightgate: enable
-  timer_rightgateclose_complete:
-    c_upperrightgate: disable
+#   diverter_leftloophit:
+#     c_upperrightgate: enable
+#   timer_rightgateclose_complete:
+#     c_upperrightgate: disable
 
-shots:
-  loopright:
-    switch: s_loopright
-  loopleft:
-    switch: s_loopleft
+# shots:
+#   loopright:
+#     switch: s_loopright
+#   loopleft:
+#     switch: s_loopleft
 
-sequence_shots:
-  looplefttoright:
-      switch_sequence: s_loopleft, s_loopright
-      sequence_timeout: 2s  
-
-#mode_diverter_resetstates
 event_player:
+  #======================================================
+  # LOOP CONTROL EVENTS    
+  #======================================================
+
+  # #Left Loop Disabled Events
+  # timer_leftdropreset_complete{current_player.state_machine_leftloop_state=="closed"}:
+  #   diverter_resetupperdrop
+  
+  # #Left Loop Enabled Events
+  # divertercontrol_enableleftloop:
+  #   diverter_dropupperdrop
+
+  # #Right Loop Hit Events:
+  # loopright_hit{current_player.state_machine_rightloop_state=="enabled"}: diverter_rightloophit, diverter_dropupperdrop
+ 
+  # #Left Loop Hit Events:
+  # loopleft_hit{current_player.state_machine_leftloop_state=="enabled"}: diverter_leftloophit
+  # loopleft_hit{current_player.state_machine_leftloop_state=="travel"}: diverter_leftloophit, diverter_leftlooptravelhit
+
+#======================================================
+# WE WILL CONTROL ALL DIVERTER CONTROL ACTIVITIES HERE     
+#======================================================
   ball_starting:
     divertercontrol_checkworldstate
   mode_divertercontrol_started:
     divertercontrol_checkworldstate
 
-  #Left Loop Disabled Events
-  timer_leftdropreset_complete{current_player.state_machine_leftloop_state=="closed"}:
-    diverter_resetupperdrop
-  
-  #Left Loop Enabled Events
-  divertercontrol_enableleftloop:
-    diverter_dropupperdrop
+#check the following:
+# -------------------------------------
+# | MULTIBALL RUNNING                 | 
+# -------------------------------------
 
-  #Right Loop Hit Events:
-  loopright_hit{current_player.state_machine_rightloop_state=="enabled"}: diverter_rightloophit, diverter_dropupperdrop
- 
-  #Left Loop Hit Events:
-  loopleft_hit{current_player.state_machine_leftloop_state=="enabled"}: diverter_leftloophit
-  loopleft_hit{current_player.state_machine_leftloop_state=="travel"}: diverter_leftloophit, diverter_leftlooptravelhit
-
-#======================================================
-# WE WILL CONTROL ALL DIVERTER CONTROL ACTIVITIES HERE     
-#======================================================
-  ball_started:
-    divertercontrol_checkworldstate
-  world1_started:
-    divertercontrol_checkworldstate
-  world1_collected:
-    divertercontrol_checkworldstate
-
-  world2_started:
-    divertercontrol_checkworldstate
-  world2_collected:
-    divertercontrol_checkworldstate
-
-  world3_started:
-    divertercontrol_checkworldstate
-  world3_collected:
-    divertercontrol_checkworldstate
-
-  world4_started:
-    divertercontrol_checkworldstate
-  world4_collected:
-    divertercontrol_checkworldstate
-
-  world5_started:
-    divertercontrol_checkworldstate
-  world5_collected:
-    divertercontrol_checkworldstate
-
-  multiball_villagermb_ended:
-    divertercontrol_checkworldstate
+# Is Night Mode Running?
+  multiball_nightmb_started:
+    divertercontrol_multiball_night_requested
   multiball_nightmb_ended:
     divertercontrol_checkworldstate
 
-
-  #Villager Multiball Tangent
-  #<< Villager Multiball Ready
-  villagermultiball_ready:
-    divertercontrol_leftloop_disable
-    divertercontrol_rightloop_disable
-
-  #<< Villager Multiball Started
-  villagermultiball_start:
-   divertercontrol_checkworldstate
-  villagermb_disable:
+# Is Villager MB Running?
+  multiball_villagermb_started:
+    divertercontrol_multiball_villager_requested
+  multiball_villagermb_ended:
     divertercontrol_checkworldstate
 
-  nightmode_ready:
-    divertercontrol_checkworldstate
-  nightmode_start:
-    divertercontrol_checkworldstate
-  
-  #>> MULTIBALL IS RUNNING (NIGHT OR VILLAGE MULTIBALL)
-  divertercontrol_checkworldstate{current_player.multiplier_mb==2}:
-    divertercontrol_leftloop_close
-    divertercontrol_rightloop_enable
+# -------------------------------------
+# | NO MULTIBALLS RUNNING             | 
+# -------------------------------------
 
+# Is Travel Ready?
   divertercontrol_checkworldstate{current_player.world_id > 0 and current_player.multiplier_mb==1 and current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
-    divertercontrol_leftloop_travel
-    divertercontrol_rightloop_enable
+    divertercontrol_worldtravel_requested
 
-  #>> Village Multiball Return Not All Items Collected (World Started)
-  divertercontrol_checkworldstate{current_player.multiplier_mb==1 and (current_player.world_item1_remaining > 0 or current_player.world_item2_remaining > 0 or current_player.world_item3_remaining > 0 or current_player.world_item4_remaining > 0)}:
-    divertercontrol_leftloop_close
-    divertercontrol_rightloop_enable
+# Is Villager MB Ready?
+  villagermultiball_ready{current_player.world_item1_remaining > 0 or current_player.world_item2_remaining > 0 or current_player.world_item3_remaining > 0 or current_player.world_item4_remaining > 0}:
+    divertercontrol_worldvillager_requested
+# Is Tools Ready?
+  crafting_lit{current_player.diverter_status_state=="world_running"}:                           #TODO: THIS WILL NOT WORK
+    divertercontrol_worldtools_requested 
+# -> None Ready?
+
+
+  # ball_started:
+  #   divertercontrol_checkworldstate
+  # world1_started:
+  #   divertercontrol_checkworldstate
+  # world1_collected:
+  #   divertercontrol_checkworldstate
+
+  # world2_started:
+  #   divertercontrol_checkworldstate
+  # world2_collected:
+  #   divertercontrol_checkworldstate
+
+  # world3_started:
+  #   divertercontrol_checkworldstate
+  # world3_collected:
+  #   divertercontrol_checkworldstate
+
+  # world4_started:
+  #   divertercontrol_checkworldstate
+  # world4_collected:
+  #   divertercontrol_checkworldstate
+
+  # world5_started:
+  #   divertercontrol_checkworldstate
+  # world5_collected:
+  #   divertercontrol_checkworldstate
+
+  # multiball_villagermb_ended:
+  #   divertercontrol_checkworldstate
+  # multiball_nightmb_ended:
+  #   divertercontrol_checkworldstate
+
+
+  # #Villager Multiball Tangent
+  # #<< Villager Multiball Ready
+  # villagermultiball_ready:
+  #   divertercontrol_leftloop_disable
+  #   divertercontrol_rightloop_disable
+
+  # #<< Villager Multiball Started
+  # villagermultiball_start:
+  #  divertercontrol_checkworldstate
+  # villagermb_disable:
+  #   divertercontrol_checkworldstate
+
+  # nightmode_ready:
+  #   divertercontrol_checkworldstate
+  # nightmode_start:
+  #   divertercontrol_checkworldstate
+  
+  # #>> MULTIBALL IS RUNNING (NIGHT OR VILLAGE MULTIBALL)
+  # divertercontrol_checkworldstate{current_player.multiplier_mb==2}:
+  #   divertercontrol_leftloop_close
+  #   divertercontrol_rightloop_enable
+
+  # divertercontrol_checkworldstate{current_player.world_id > 0 and current_player.multiplier_mb==1 and current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
+  #   divertercontrol_leftloop_travel
+  #   divertercontrol_rightloop_enable
+
+  # #>> Village Multiball Return Not All Items Collected (World Started)
+  # divertercontrol_checkworldstate{current_player.multiplier_mb==1 and (current_player.world_item1_remaining > 0 or current_player.world_item2_remaining > 0 or current_player.world_item3_remaining > 0 or current_player.world_item4_remaining > 0)}:
+  #   divertercontrol_leftloop_close
+  #   divertercontrol_rightloop_enable
 
 
 
