--- a/modes/worldcontroller/config/worldcontroller.yaml
+++ b/modes/worldcontroller/config/worldcontroller.yaml
@@ -4,6 +4,9 @@ mode:
     stop_events:  mode_world1_stopped, mode_world2_stopped, mode_world3_stopped, mode_world4_stopped, mode_world5_stopped
     priority: 550
 
+
+# TODO: Travel was disable between balls
+
 shot_profiles:
   collectshot:
     states:
@@ -58,10 +61,10 @@ variable_player:
   #COLLECT ITEM 2 HIT
   collectitem2_hit:
     world_item2_remaining: -1 * current_player.pickaxe
-    score: 10000 * current_player.multiplier_mb * current_player.pickaxe
-    bonus_items: 1* current_player.multiplier_mb
-    world_jackpot_items: 1* current_player.multiplier_mb
-    world_jackpot_base: 1000* current_player.multiplier_mb
+    score: 10000 * current_player.pickaxe * current_player.multiplier_mb 
+    bonus_items: 1  * current_player.pickaxe 
+    world_jackpot_items: 1  * current_player.pickaxe 
+    world_jackpot_base: 1000 * current_player.pickaxe 
 
   collectitem2_hit{current_player.world_item2_remaining < 0}:
     world_item2_remaining:
